--- a/src/app/modules/survey/survey-list/survey-list.component.scss
+++ b/src/app/modules/survey/survey-list/survey-list.component.scss
@@ -2,7 +2,7 @@
   background: white;
   border-radius: 12px;
   box-shadow: 0 4px 20px rgba(0, 0, 0, 0.08);
-  padding: 10px 30px 30px 30px;
+  padding: 24px;
   margin: 0;
 
   h2 {
